--- a/.github/workflows/test-auto-pr.yml
+++ b/.github/workflows/test-auto-pr.yml
@@ -54,6 +54,7 @@ jobs:
           gh pr merge --auto --delete-branch --squash "$LOCAL_BRANCH"
 
           echo 'Marker - before running gh pr checks'
+          sleep 10
           gh pr status
           
           gh pr checks $PR_URL --watch
