--- a/.github/workflows/test-auto-pr.yml
+++ b/.github/workflows/test-auto-pr.yml
@@ -54,18 +54,21 @@ jobs:
           # echo 'Marker - After running gh pr checks'
           
 
-          echo "Merging PR - $PR_URL"
-          # gh pr merge --auto --delete-branch --squash "$LOCAL_BRANCH"
 
-          gh pr view $PR_URL --json status
+          gh pr view $PR_URL --json mergeCommit,mergeStateStatus,mergeable,mergedAt,potentialMergeCommit,state,statusCheckRollup
+          sleep 60
+          
+          echo "Merging PR - $PR_URL"
+          gh pr merge --auto --delete-branch --squash "$LOCAL_BRANCH"
+
+          gh pr view $PR_URL --json mergeCommit,mergeStateStatus,mergeable,mergedAt,potentialMergeCommit,state,statusCheckRollup
 
           MERGE_COMMIT_HASH=$(git rev-parse HEAD)
 
           echo "Local comit sha - $COMMIT_HASH"
           echo "Merge comit sha - $MERGE_COMMIT_HASH"
 
-          # gh pr status
-          
+          # gh pr status          
 
 
           # gh release edit "$TAG" --target "$COMMIT_HASH"
