--- a/.github/workflows/test-auto-pr.yml
+++ b/.github/workflows/test-auto-pr.yml
@@ -48,15 +48,12 @@ jobs:
           echo 'Creating PR...'
           PR_URL=$(gh pr create --title "$PR_TITLE" --body "This is an automated PR" --base "$BRANCH")
           echo "PR created, pr url - $PR_URL"
-          # echo 'Marker - before running gh pr checks'
-          # gh pr status
-          # gh pr checks $PR_URL --watch
-          # echo 'Marker - After running gh pr checks'
           
+          echo "Merging PR - $PR_URL"
+          gh pr merge --auto --delete-branch --squash "$LOCAL_BRANCH"
           
-          # echo "Merging PR - $PR_URL"
-          # gh pr merge --auto --delete-branch --squash "$LOCAL_BRANCH"
-
+          # Since actions do not trigger other workflows (e.g. custom workflows on push, merge, etc.), gh pr merge happens immediately
+          # the code below is just for additional safety and future-proofing
           CURRENT_TIME=0
           while [[ "$(gh pr view $PR_URL --json state --template '{{.state}}')" != 'MERGED' ]];
            do
@@ -65,7 +62,7 @@ jobs:
                   CURRENT_TIME=$((CURRENT_TIME+10))
                   sleep 10
               else 
-                  echo "::error::The wait time exceeded timeut of 60 seconds"
+                  echo "::error::The merge process took longer than the 60-second timeout limit."
                   exit 1
               fi
           done
