--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -26,6 +26,40 @@ jobs:
   update-version:
     runs-on: ubuntu-latest
     steps:
+      - name: Get tag's current commit
+        id: get_tag_commit
+        run: |
+          TAG=${{ inputs.tag_name }}
+          TAG_COMMIT=$( gh api \
+          --method GET \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/ydernov/typing-effect/git/refs/tags/$TAG | jq '.object.sha')
+
+          if [ -z "$TAG_COMMIT" ]; then
+            echo "::error::The tag $TAG might not exist, or is not attached to commit."
+            exit 1
+          fi
+          
+          echo "tag_commit=$TAG_COMMIT" >> $GITHUB_OUTPUT
+      
+      - name: Test tags'c current commit and new commit are related
+        id: test_relation
+        run: |
+          TAG_COMMIT=${{ steps.get_tag_commit.outputs.tag_commit }}
+          NEW_COMMIT=${{ inputs.commit_sha }}
+          # Check that current commit is an ancestor of new commit; 0 - if true, 1 - if false
+          FIRST=$( git merge-base --is-ancestor $TAG_COMMIT $NEW_COMMIT;  echo $?)
+          
+          # Check that new commit is an ancestor of current commit; 0 - if true, 1 - if false
+          SECOND=$( git merge-base --is-ancestor $NEW_COMMIT $TAG_COMMIT;  echo $?)
+
+          # One or the other must be an ancestor, only one
+          if [ $((FIRST + SECOND)) -ne 1 ]; then
+            echo "::error::Either the commits are not related or the references do not exist."
+            exit 1
+          fi
+          
       - name: Point a tag to a new commit
         run: |
           TAG=${{ inputs.tag_name }}
