--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -42,6 +42,10 @@ jobs:
           fi
           
           echo "tag_commit=$TAG_COMMIT" >> $GITHUB_OUTPUT
+
+      - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
       
       - name: Test tags'c current commit and new commit are related
         id: test_relation
