--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -23,7 +23,7 @@ env:
     GH_TOKEN: ${{ github.token }}
     
 jobs:
-  update-version:
+  check-and-set:
     runs-on: ubuntu-latest
     steps:
       - name: Get tag's current commit
