--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Test tags'c current commit and new commit are related
+      - name: Test tags'c current commit and new commit relation
         id: test_relation
         run: |
           TAG_COMMIT=${{ steps.get_tag_commit.outputs.tag_commit }}
