--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "keywords": [
     "typescript",
     "typing",
-    "multystring",
+    "cursor",
+    "multistring",
     "typing-effect",
     "browser",
     "visual-effect",
