--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -75,5 +75,5 @@ jobs:
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/ydernov/typing-effect/git/refs/tags/$TAG \
+            "/repos/ydernov/typing-effect/git/refs/tags/$TAG" \
             -f "sha=$COMMIT" -F "force=true" 
