--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -27,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: write
+      repository-projects: write
     steps:
       - name: Get tag's current commit
         id: get_tag_commit
@@ -70,10 +72,16 @@ jobs:
         run: |
           TAG=${{ inputs.tag_name }}
           COMMIT=${{ inputs.commit_sha }}
+
+          echo "URL - /repos/ydernov/typing-effect/git/refs/tags/$TAG"
+          echo "Flags -  -f sha=$COMMIT -F force=true"
           
-          gh api \
+          RESPONSE=$( gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "/repos/ydernov/typing-effect/git/refs/tags/$TAG" \
-            -f "sha=$COMMIT" -F "force=true" 
+            -i --verbose
+            /repos/ydernov/typing-effect/git/refs/tags/$TAG \
+            -f "sha=$COMMIT" -F "force=true" )
+
+          echo $RESPONSE
