--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -80,8 +80,7 @@ jobs:
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -i --verbose
             /repos/ydernov/typing-effect/git/refs/tags/$TAG \
-            -f "sha=$COMMIT" -F "force=true" )
+            -i --verbose -f "sha=$COMMIT" -F "force=true" )
 
           echo $RESPONSE
