--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -75,12 +75,20 @@ jobs:
 
           echo "URL - /repos/ydernov/typing-effect/git/refs/tags/$TAG"
           echo "Flags -  -f sha=$COMMIT -F force=true"
-          
-          RESPONSE=$( gh api \
-            --method PATCH \
+
+          RESPONSE=$( curl -L \
+            -X PATCH \
             -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer <YOUR-TOKEN>" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/ydernov/typing-effect/git/refs/tags/$TAG \
-            -i --verbose -f "sha=$COMMIT" -F "force=true" )
+            https://api.github.com/repos/ydernov/typing-effect/git/refs/tags/$TAG \
+            -d "{'sha':'aa218f56b14c9653891f9e74264a383fa43fefbd','force':true}" -v )
+          
+          # RESPONSE=$( gh api \
+          #   --method PATCH \
+          #   -H "Accept: application/vnd.github+json" \
+          #   -H "X-GitHub-Api-Version: 2022-11-28" \
+          #   /repos/ydernov/typing-effect/git/refs/tags/$TAG \
+          #   -i --verbose -f "sha=$COMMIT" -F "force=true" )
 
           echo $RESPONSE
