--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -79,7 +79,7 @@ jobs:
           RESPONSE=$( curl -L \
             -X PATCH \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer <YOUR-TOKEN>" \
+            -H "Authorization: Bearer ${{ github.token }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/ydernov/typing-effect/git/refs/tags/$TAG \
             -d "{'sha':'aa218f56b14c9653891f9e74264a383fa43fefbd','force':true}" -v )
