--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -82,7 +82,7 @@ jobs:
             -H "Authorization: Bearer ${{ github.token }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/ydernov/typing-effect/git/refs/tags/$TAG \
-            -d "{'sha':'aa218f56b14c9653891f9e74264a383fa43fefbd','force':true}" -v )
+            -d "{\"sha\":\"$COMMIT\",\"force\":true}" -v )
           
           # RESPONSE=$( gh api \
           #   --method PATCH \
