--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -82,7 +82,7 @@ jobs:
             -H "Authorization: Bearer ${{ github.token }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
-            -d "{\"sha\":\"$COMMIT\",\"force\":true}" -v )
+            -d "{\"sha\":\"4eb6962463bd6c30ac1eac3c9da87db1021e6bf0\",\"force\":true}" -v )
           
           # RESPONSE=$( gh api \
           #   --method PATCH \
