--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -76,13 +76,13 @@ jobs:
           echo "URL - /repos/ydernov/typing-effect/git/refs/tags/$TAG"
           echo "Flags -  -f sha=$COMMIT -F force=true"
 
-          RESPONSE=$( curl -L \
-            -X PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ github.token }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
-            -d "{\"sha\":\"4eb6962463bd6c30ac1eac3c9da87db1021e6bf0\",\"force\":true}" -v )
+          # RESPONSE=$( curl -L \
+          #   -X PATCH \
+          #   -H "Accept: application/vnd.github+json" \
+          #   -H "Authorization: Bearer ${{ github.token }}" \
+          #   -H "X-GitHub-Api-Version: 2022-11-28" \
+          #   https://api.github.com/repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
+          #   -d "{\"sha\":\"4eb6962463bd6c30ac1eac3c9da87db1021e6bf0\",\"force\":true}" -v )
           
           # RESPONSE=$( gh api \
           #   --method PATCH \
@@ -90,5 +90,12 @@ jobs:
           #   -H "X-GitHub-Api-Version: 2022-11-28" \
           #   /repos/ydernov/typing-effect/git/refs/tags/$TAG \
           #   -i --verbose -f "sha=$COMMIT" -F "force=true" )
+
+          RESPONSE=$( gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
+            -i --verbose -f sha="4eb6962463bd6c30ac1eac3c9da87db1021e6bf0" -F force=true )
 
           echo $RESPONSE
