--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -30,22 +30,22 @@ jobs:
       pull-requests: write
       repository-projects: write
     steps:
-      - name: Get tag's current commit
-        id: get_tag_commit
-        run: |
-          TAG=${{ inputs.tag_name }}
-          TAG_COMMIT=$( gh api \
-          --method GET \
-          -H "Accept: application/vnd.github+json" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          /repos/ydernov/typing-effect/git/refs/tags/$TAG | jq '.object.sha')
+      # - name: Get tag's current commit
+      #   id: get_tag_commit
+      #   run: |
+      #     TAG=${{ inputs.tag_name }}
+      #     TAG_COMMIT=$( gh api \
+      #     --method GET \
+      #     -H "Accept: application/vnd.github+json" \
+      #     -H "X-GitHub-Api-Version: 2022-11-28" \
+      #     /repos/ydernov/typing-effect/git/refs/tags/$TAG | jq '.object.sha')
 
-          if [ -z "$TAG_COMMIT" ]; then
-            echo "::error::The tag $TAG might not exist, or is not attached to commit."
-            exit 1
-          fi
+      #     if [ -z "$TAG_COMMIT" ]; then
+      #       echo "::error::The tag $TAG might not exist, or is not attached to commit."
+      #       exit 1
+      #     fi
           
-          echo "tag_commit=$TAG_COMMIT" >> $GITHUB_OUTPUT
+      #     echo "tag_commit=$TAG_COMMIT" >> $GITHUB_OUTPUT
       
       # - name: Test tags'c current commit and new commit relation
       #   id: test_relation
