--- a/.github/workflows/tmp-tag-test.yml
+++ b/.github/workflows/tmp-tag-test.yml
@@ -25,7 +25,16 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/ydernov/typing-effect/git/refs/tags/v1.2.0 \
             -f sha='1a12442506c85d6ab94d75b5c69b69b84604de5d' \
-           -F force=true
+           -F force=true 
+           
+          # gh api \
+          #   --method PATCH \
+          #   -H "Accept: application/vnd.github+json" \
+          #   -H "X-GitHub-Api-Version: 2022-11-28" \
+          #   /repos/ydernov/typing-effect/git/refs/tags/v1.2.0 \
+          #   -f sha='1a12442506c85d6ab94d75b5c69b69b84604de5d' \
+          #  -F force=true
+           
 
            
 
