--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -1,18 +1,18 @@
-name: test sha update u2
+name: test sha update 0
 
 on:         
   workflow_dispatch:
-    
-    
+
+
 env:
     GH_TOKEN: ${{ github.token }}
-    
+
 jobs:
   update-version:
     runs-on: ubuntu-latest
     steps:    
-      
-      
+
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -24,9 +24,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/ydernov/typing-effect/git/refs/tags/v1.2.0 \
-            -f sha='1a12442506c85d6ab94d75b5c69b69b84604de5d' \
+            -f sha='4c998f5a777bcc66bafcda24df324ee3e1081d69' \
            -F force=true
-        
-
+           
           # gh release edit 'v1.2.0' --target 4c998f5a777bcc66bafcda24df324ee3e1081d69
-
