--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
 
 
+# permissions: write-all
 env:
     GH_TOKEN: ${{ github.token }}
 
-permissions: write-all
 
 jobs:
   update-version:
@@ -31,5 +31,5 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
-            -f "sha=d366a86afddd414b35d25789142a25e269bbdeea" 
+            -F 'sha=d366a86afddd414b35d25789142a25e269bbdeea' -F 'force=true' --verbose
            
