--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 
-# permissions: write-all
+permissions: write-all
 env:
     GH_TOKEN: ${{ github.token }}
 
@@ -31,5 +31,5 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
-            -F 'sha=4eb6962463bd6c30ac1eac3c9da87db1021e6bf0' -F 'force=true' --verbose
+            -f 'sha=4eb6962463bd6c30ac1eac3c9da87db1021e6bf0' -F 'force=true'
            
