--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 
-permissions: write-all
+# permissions: write-all
 env:
     GH_TOKEN: ${{ github.token }}
 
@@ -26,6 +26,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          gh auth status
           gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
