--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,7 +4,11 @@ on:
   workflow_dispatch:
 
 
-permissions: write-all
+permissions: 
+  contents: write
+  workflows: write
+  # actions: write
+  
 env:
     GH_TOKEN: ${{ github.token }}
 
