--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -6,8 +6,7 @@ on:
 
 permissions: 
   contents: write
-  workflows: write
-  # actions: write
+  actions: write
   
 env:
     GH_TOKEN: ${{ github.token }}
