--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
 
 
-permissions: 
-  contents: write
-  actions: write
+# permissions: 
+#   contents: write
+#   actions: write
   
 env:
-    GH_TOKEN: ${{ github.token }}
+    GH_TOKEN: ${{ secrets.REF_UPDATE_PAT }}
 
 
 jobs:
