--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
 
 
-# permissions: 
-#   contents: write
-#   actions: write
+permissions: 
+  contents: write
+  actions: write
   
 env:
     GH_TOKEN: ${{ secrets.REF_UPDATE_PAT }}
