--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -24,7 +24,7 @@ jobs:
 
           
           # fad7515f94e9f3aca39adfa923d6efcf523ae7f7
-          # gh release edit 'v1.2.0' --target 4c998f5a777bcc66bafcda24df324ee3e1081d69
+          # gh release edit 'v1.2.0' --target 4eb6962463bd6c30ac1eac3c9da87db1021e6bf0 1a12442506c85d6ab94d75b5c69b69b84604de5d
           # -F "force=true"
 
       - name: Commit and push changes
@@ -35,5 +35,5 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
-            -f 'sha=4eb6962463bd6c30ac1eac3c9da87db1021e6bf0' -F 'force=true'
+            -f 'sha=1a12442506c85d6ab94d75b5c69b69b84604de5d' -F 'force=true'
            
