--- a/.github/workflows/tmp-tag-test-1.yml
+++ b/.github/workflows/tmp-tag-test-1.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
 
 
-permissions: 
-  contents: write
-  actions: write
+# permissions: 
+#   contents: write
+#   actions: write
   
 env:
     GH_TOKEN: ${{ secrets.REF_UPDATE_PAT }}
@@ -29,11 +29,11 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          gh auth status
           gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/ydernov/typing-effect/git/refs/tags/v1.3.0 \
-            -f 'sha=1a12442506c85d6ab94d75b5c69b69b84604de5d' -F 'force=true'
+            -f 'sha=4eb6962463bd6c30ac1eac3c9da87db1021e6bf0' -F 'force=true'
+          gh release edit v1.3.0 --target 4eb6962463bd6c30ac1eac3c9da87db1021e6bf0
            
