--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -18,6 +18,8 @@ jobs:
     with:
       tag_name: ${{github.ref_name}}
       commit_sha: ${{needs.set_version_to_tag.outputs.merge_commit_sha}}
+    secrets:
+      ref_pat: ${{ secrets.REF_UPDATE_PAT }}
 
   create-and-publish-coverage:
     needs: set_version_to_tag
@@ -36,3 +38,5 @@ jobs:
     uses: ./.github/workflows/publish-to-npm.yml
     with:
       ref: ${{github.ref}}
+    secrets:
+      npm_token: ${{ secrets.NPM_TOKEN }}
