--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -6,7 +6,13 @@ on:
       ref:
         required: true
         type: string
+    secrets:
+      NPM_TOKEN:
+        required: true
 
+env:
+  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  
 jobs:
   build-n-publish:
     runs-on: ubuntu-latest
@@ -21,5 +27,3 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm publish --provenance --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
