--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -89,11 +89,13 @@ jobs:
           git fetch origin gh-pages
           git reset origin/gh-pages
           git checkout gh-pages
+
+          TARGET_DIR="${{ env.PAGES_TARGET }}"
   
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
-          git add -f coverage
+          git add -f coverage/$TARGET_DIR
           git commit -m "Run coverage and created badge for ${{ env.PAGES_TARGET }}"
           git push --atomic origin gh-pages
 
