--- a/.github/workflows/publish-to-github-packages.yml
+++ b/.github/workflows/publish-to-github-packages.yml
@@ -31,6 +31,9 @@ jobs:
       with:
         node-version: '20'
         registry-url: 'https://npm.pkg.github.com'
+
+    - run: cat .npmrc
+    - run: cat ./.npmrc
         
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
