--- a/.github/workflows/publish-to-github-packages.yml
+++ b/.github/workflows/publish-to-github-packages.yml
@@ -31,8 +31,13 @@ jobs:
       with:
         node-version: '20'
         registry-url: 'https://npm.pkg.github.com'
+        always-auth: true
 
-    - run: cat ./.npmrc
+    - run: ls
+      if: always()
+      
+    - run: cat /home/runner/work/_temp/.npmrc
+      if: always()
         
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
