--- a/.github/workflows/publish-to-github-packages.yml
+++ b/.github/workflows/publish-to-github-packages.yml
@@ -42,6 +42,9 @@ jobs:
     - run: |
         npm config delete @ydernov:registry
         npm config set registry https://npm.pkg.github.com/
+
+    - run: npm config list
+      if: always()
         
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
