--- a/.github/workflows/tmp-fix-releases.yml
+++ b/.github/workflows/tmp-fix-releases.yml
@@ -17,6 +17,8 @@ jobs:
   check-and-set:
     runs-on: ubuntu-latest
     steps:
+
+      - uses: actions/checkout@v4
           
       - name: Fix ${{ inputs.tag_name }} release commit reference
         run: |
