--- a/.github/workflows/build-demo-for-main.yml
+++ b/.github/workflows/build-demo-for-main.yml
@@ -21,15 +21,17 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git fetch origin gh-pages
-          git reset origin/gh-pages
+          # git fetch origin gh-pages
+          # git reset origin/gh-pages
           git checkout gh-pages
           git branch gh-pages-publish-demo
+
+          cp -r dist-demo/* .
 
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git add package-lock.json package.json
+          git add .
           git commit -m "Built demo for main"
           git push origin gh-pages-publish-demo
 
