--- a/.github/workflows/build-demo-for-main.yml
+++ b/.github/workflows/build-demo-for-main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          # git fetch origin gh-pages
+          git fetch origin gh-pages
           # git reset origin/gh-pages
           git checkout gh-pages
           git branch gh-pages-publish-demo
