--- a/.github/workflows/build-demo-for-main.yml
+++ b/.github/workflows/build-demo-for-main.yml
@@ -22,14 +22,23 @@ jobs:
       - name: Commit and push changes
         run: |
           git fetch origin gh-pages
-          git reset origin/gh-pages
           git checkout gh-pages
-          git branch gh-pages-publish-demo
+          git branch gh-pages-publish-demo && git switch gh-pages-publish-demo
 
-          echo "Sleeping dor 30 "
-          sleep 30
+          # save dist-demo to first stash
+          git add dist-demo
+          git stash
 
+          # cleanup all unstaged with another stash and drop
+          git stash -u && git stash drop
+
+          # restore first stash with dist-demo
+          git stash pop               
+
+          # place dist-demo contents into root
           cp -r dist-demo/* .
+          # delete dist-demo
+          rm -r dist-demo
 
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -37,9 +46,6 @@ jobs:
           git add .
           git commit -m "Built demo for main"
           git push origin gh-pages-publish-demo
-
-          echo "Sleeping dor 30"
-          sleep 30
 
           echo 'Creating PR...'
           PR_URL=$(gh pr create --title "chore (automated): Updated demo for main" --body "This is an automated PR to update demo" --base gh-pages)
