--- a/.github/workflows/build-demo-for-main.yml
+++ b/.github/workflows/build-demo-for-main.yml
@@ -50,5 +50,5 @@ jobs:
           echo 'Creating PR...'
           PR_URL=$(gh pr create --title "chore (automated): Updated demo for main" --body "This is an automated PR to update demo" --base gh-pages)
           echo "PR created, pr url - $PR_URL"
-          # echo "Merging PR - $PR_URL"
-          # gh pr merge $PR_URL --auto --delete-branch --squash
+          echo "Merging PR - $PR_URL"
+          gh pr merge $PR_URL --auto --delete-branch --squash
