--- a/.github/workflows/build-demo-for-main.yml
+++ b/.github/workflows/build-demo-for-main.yml
@@ -40,15 +40,22 @@ jobs:
           # delete dist-demo
           rm -r dist-demo
 
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          git add .
-          git commit -m "Built demo for main"
-          git push origin gh-pages-publish-demo
-
-          echo 'Creating PR...'
-          PR_URL=$(gh pr create --title "chore (automated): Updated demo for main" --body "This is an automated PR to update demo" --base gh-pages)
-          echo "PR created, pr url - $PR_URL"
-          echo "Merging PR - $PR_URL"
-          gh pr merge $PR_URL --auto --delete-branch --squash
+          # only coomit and push if there are changes
+          if [ $(git add . && git diff --quiet && git diff --cached --quiet; echo $?) -eq 1 ]; then 
+          
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+  
+            git add .
+            git commit -m "Built demo for main"
+            git push origin gh-pages-publish-demo
+  
+            echo 'Creating PR...'
+            PR_URL=$(gh pr create --title "chore (automated): Updated demo for main" --body "This is an automated PR to update demo" --base gh-pages)
+            echo "PR created, pr url - $PR_URL"
+            echo "Merging PR - $PR_URL"
+            gh pr merge $PR_URL --auto --delete-branch --squash
+            
+          else
+            echo 'No changes to commit'
+          fi
