--- a/.github/workflows/on-main-update.yml
+++ b/.github/workflows/on-main-update.yml
@@ -7,3 +7,7 @@ on:
 jobs:
   build-demo:
     uses: ./.github/workflows/build-demo-for-main.yml
+    
+  create-and-publish-coverage:
+    needs: build-demo
+    uses: ./.github/workflows/coverage-and-badge.yml
