--- a/.github/workflows/on-main-update.yml
+++ b/.github/workflows/on-main-update.yml
@@ -11,3 +11,5 @@ jobs:
   create-and-publish-coverage:
     needs: build-demo
     uses: ./.github/workflows/coverage-and-badge.yml
+      with:
+        ref: ${{github.ref}}
