--- a/.github/workflows/publish-pakckage.yml
+++ b/.github/workflows/publish-pakckage.yml
@@ -1,4 +1,4 @@
-name: Publish to NPM andGitHub packages
+name: Publish to NPM and GitHub packages
 run-name: Publish package for ${{ inputs.tag_name }}
 
 on:
@@ -12,7 +12,7 @@ jobs:
   check-release-and-get-commit:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.get_sha.outputs.sha }}
+      sha: ${{ steps.get_sha.outputs.sha }}
     steps:
       - id: get_sha
         run: |
@@ -35,6 +35,7 @@ jobs:
     steps: 
       - run: |
           echo "Got this commit - ${{needs.check-release-and-get-commit.outputs.sha}}"
+          echo 'Got this commit - ${{needs.check-release-and-get-commit.outputs.sha}}'
           
   # publish-to-github-packages:
   #   needs: check-release-and-get-commit
