--- a/.github/workflows/publish-pakckage.yml
+++ b/.github/workflows/publish-pakckage.yml
@@ -30,7 +30,7 @@ jobs:
           echo "sha=$TAG_COMMIT" >> $GITHUB_OUTPUT
 
   test-job:
-    runs-on: ubuntu-latest:
+    runs-on: ubuntu-latest
     needs: check-release-and-get-commit
     steps: 
       - run: |
