--- a/.github/workflows/publish-pakckage.yml
+++ b/.github/workflows/publish-pakckage.yml
@@ -23,7 +23,7 @@ jobs:
           TAG_COMMIT=$( gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/ydernov/typing-effect/releases/tags/v1.3.4 | jq '.target_commitish' )
+            /repos/ydernov/typing-effect/releases/tags/$TAG | jq '.target_commitish' )
 
           if [ -z "$TAG_COMMIT" ]; then
             echo "::error::Failed to determine tag's release commit. Check that tag $TAG exists, and has release refefence."
