--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -39,7 +39,7 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           /repos/ydernov/typing-effect/git/refs/tags/$TAG | jq '.object.sha')
 
-          if [ -z "$TAG_COMMIT" ]; then
+          if [ -z "$TAG_COMMIT" ] || [ "$TAG_COMMIT" = "null" ]; then
             echo "::error::The tag $TAG might not exist, or is not attached to commit."
             exit 1
           fi
