--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,5 +1,5 @@
 name: Publish to NPM and GitHub packages
-run-name: Publish package for ${{ inputs.tag_name }}
+run-name: Build and publish package for ${{ inputs.tag_name }}
 
 on:
   workflow_dispatch:
@@ -31,26 +31,17 @@ jobs:
           fi
 
           echo "sha=$TAG_COMMIT" >> $GITHUB_OUTPUT
-
-  test-job:
-    runs-on: ubuntu-latest
-    needs: check-release-and-get-commit
-    steps: 
-      - run: |
-          echo "Got this commit - ${{needs.check-release-and-get-commit.outputs.sha}}"
-          echo 'Got this commit - ${{needs.check-release-and-get-commit.outputs.sha}}'
           
-  # publish-to-github-packages:
-  #   needs: check-release-and-get-commit
-  #   uses: ./.github/workflows/publish-to-github-packages.yml
-  #   with:
-  #     ref: ${{needs.check-release-and-get-commit.outputs.sha}}
+  publish-to-github-packages:
+    needs: check-release-and-get-commit
+    uses: ./.github/workflows/publish-to-github-packages.yml
+    with:
+      ref: ${{needs.check-release-and-get-commit.outputs.sha}}
 
-  # publish-to-npm:
-  #   needs: check-release-and-get-commit
-  #   uses: ./.github/workflows/publish-to-npm.yml
-  #   with:
-  #     ref: ${{needs.check-release-and-get-commit.outputs.sha}}
-      
-    # secrets:
-    #   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  publish-to-npm:
+    needs: check-release-and-get-commit
+    uses: ./.github/workflows/publish-to-npm.yml
+    with:
+      ref: ${{needs.check-release-and-get-commit.outputs.sha}}
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
