--- a/.github/workflows/__checkout-sha-test.yml
+++ b/.github/workflows/__checkout-sha-test.yml
@@ -6,6 +6,9 @@ on:
       tag_name:
         required: true
         type: string
+
+env:
+  GH_TOKEN: ${{ github.token }}
     
 jobs:
   check-release-and-get-commit:
