--- a/.github/workflows/__checkout-sha-test.yml
+++ b/.github/workflows/__checkout-sha-test.yml
@@ -33,6 +33,6 @@ jobs:
 
       - uses: actions/checkout@v4
         with: 
-          ref: f88e70a6af3814417955dca6ebc451b83fcb91d2
+          ref: "f88e70a6af3814417955dca6ebc451b83fcb91d2"
           # ${{ steps.get_sha.outputs.sha }}
           
