--- a/.github/workflows/__checkout-sha-test.yml
+++ b/.github/workflows/__checkout-sha-test.yml
@@ -22,10 +22,10 @@ jobs:
           TAG_COMMIT=$( gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/ydernov/typing-effect/releases/tags/$TAG | jq '.target_commitish' )
+            /repos/ydernov/typing-effect/releases/tags/$TAG | jq '.target_commitish' | tr -d '"')
 
-          if [ -z "$TAG_COMMIT" ] || [ "$TAG_COMMIT" = "null" ]; then
-            echo "::error::Failed to determine tag's release commit. Check that tag $TAG exists, and has release refefence."
+          if [ -z "$TAG_COMMIT" ] || [ "$TAG_COMMIT" = null ]; then
+            echo "::error::Failed to determine tag's release commit. Check that tag $TAG exists, and has release reference."
             exit 1
           fi
 
@@ -33,6 +33,5 @@ jobs:
 
       - uses: actions/checkout@v4
         with: 
-          ref: "f88e70a6af3814417955dca6ebc451b83fcb91d2"
-          # ${{ steps.get_sha.outputs.sha }}
+          ref: ${{ steps.get_sha.outputs.sha }}
           
