--- a/.github/workflows/point-tag-to-new-commit.yml
+++ b/.github/workflows/point-tag-to-new-commit.yml
@@ -37,9 +37,9 @@ jobs:
           --method GET \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          /repos/ydernov/typing-effect/git/refs/tags/$TAG | jq '.object.sha')
+          /repos/ydernov/typing-effect/git/refs/tags/$TAG | jq '.object.sha' | tr -d '"' )
 
-          if [ -z "$TAG_COMMIT" ] || [ "$TAG_COMMIT" = "null" ]; then
+          if [ -z "$TAG_COMMIT" ] || [ "$TAG_COMMIT" = null ]; then
             echo "::error::The tag $TAG might not exist, or is not attached to commit."
             exit 1
           fi
